samples/_failures_safe/1761614984_e135a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43ca75f6.c: In function ‘main’:
./samples/SAFE/__tmp_43ca75f6.c:169:12: error: missing terminating " character
  169 |     printf("Enter arithmetic expression:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_43ca75f6.c:169:5: error: expected expression at end of input
  169 |     printf("Enter arithmetic expression:
      |     ^~~~~~
./samples/SAFE/__tmp_43ca75f6.c:169:5: error: expected declaration or statement at end of input
